/**
 * exchange.handler.js
 * Secure Exchange Service RPCå¤„ç†å™¨
 * å¤„ç†æ¥è‡ªå…¶ä»–å¾®æœåŠ¡çš„gRPCè°ƒç”¨
 */

const exchangeService = require('../../services/exchange.service');
const messageService = require('../../services/message.service');

/**
 * å‘é€åŠ å¯†æ¶ˆæ¯ï¼ˆRPCä¸“ç”¨ - ç®€åŒ–ç‰ˆï¼Œä¸éœ€è¦ç­¾åï¼‰
 * @param {Object} call - gRPCè°ƒç”¨å¯¹è±¡
 * @param {Function} callback - å›è°ƒå‡½æ•°
 */
async function sendEncryptedMessage(call, callback) {
    try {
        const {
            sender_address,
            recipient_address,
            encrypted_data,
            data_type,
            metadata,
            timestamp
        } = call.request;

        console.log(`ğŸ“¥ RPC: æ”¶åˆ°å‘é€åŠ å¯†æ¶ˆæ¯è¯·æ±‚`);
        console.log(`   å‘é€è€…: ${sender_address}`);
        console.log(`   æ¥æ”¶è€…: ${recipient_address}`);
        console.log(`   æ•°æ®ç±»å‹: ${data_type}`);

        // â­ RPC è°ƒç”¨ç›´æ¥åˆ›å»ºæ¶ˆæ¯ï¼ˆè·³è¿‡ç­¾åéªŒè¯ï¼Œå› ä¸ºæ˜¯æœåŠ¡é—´è°ƒç”¨ï¼‰
        const crypto = require('crypto');
        const messageEntity = require('../../entity/message.entity');
        const config = require('../../config');
        
        // æ•°æ®åº“ timestamp å­—æ®µæ˜¯ BIGINT ç±»å‹ï¼Œéœ€è¦æ¯«ç§’æ—¶é—´æˆ³
        const currentTimestamp = timestamp ? parseInt(timestamp) : Date.now();
        const expiresAt = new Date(Date.now() + config.message.defaultExpiresIn * 1000);
        
        // æ•°æ®åº“ encrypted_data å­—æ®µæ˜¯ TEXT ç±»å‹ï¼Œéœ€è¦ hex å­—ç¬¦ä¸²
        // gRPC bytes ç±»å‹ä¼ é€’çš„æ˜¯ Bufferï¼Œéœ€è¦è½¬æ¢ä¸º hex
        const encryptedHex = Buffer.from(encrypted_data).toString('hex');
        console.log(`   åŠ å¯†æ•°æ®é•¿åº¦: ${encryptedHex.length} å­—ç¬¦ (hex)`);
        
        const result = await messageEntity.create({
            sessionId: null,
            senderAddress: sender_address,
            recipientAddress: recipient_address,
            encryptedData: encryptedHex,  // å­˜å‚¨ hex å­—ç¬¦ä¸²
            signature: 'RPC_INTERNAL',  // å†…éƒ¨æ ‡è®°
            dataType: data_type || 'medication_plan',
            metadata: metadata ? JSON.parse(metadata) : {},
            nonce: crypto.randomBytes(16).toString('hex'),
            timestamp: currentTimestamp,
            expiresAt: expiresAt
        });

        console.log(`âœ… RPC: æ¶ˆæ¯å·²åˆ›å»ºï¼ŒID: ${result.message_id}`);

        // å‘é€ MQ é€šçŸ¥ï¼ˆé€šçŸ¥æ‚£è€…ï¼‰
        const { publishEncryptedMessageNotification } = require('../../mq/producer');
        await publishEncryptedMessageNotification(recipient_address.toLowerCase(), {
            messageId: result.message_id,
            senderAddress: result.sender_address,
            encryptedData: result.encrypted_data,
            dataType: result.data_type,
            metadata: result.metadata,
            timestamp: result.timestamp
        }).catch(err => {
            console.warn('âš ï¸ RPC: å‘é€MQé€šçŸ¥å¤±è´¥:', err.message);
        });

        // è¿”å›å“åº”ï¼ˆå°† hex å­—ç¬¦ä¸²è½¬å› Buffer ä¾› gRPC bytes ç±»å‹ä½¿ç”¨ï¼‰
        callback(null, {
            message_id: result.message_id,
            encrypted_data: Buffer.from(result.encrypted_data, 'hex'),
            recipient_address: recipient_address,
            encrypted_at: result.created_at || new Date().toISOString(),
            success: true,
            error_message: ''
        });
    } catch (error) {
        console.error('âŒ RPC: å‘é€åŠ å¯†æ¶ˆæ¯å¤±è´¥:', error.message);
        callback(null, {
            message_id: '',
            encrypted_data: Buffer.from([]),
            recipient_address: '',
            encrypted_at: '',
            success: false,
            error_message: error.message
        });
    }
}

/**
 * è·å–ç”¨æˆ·çš„åŠ å¯†æ¶ˆæ¯åˆ—è¡¨
 * @param {Object} call - gRPCè°ƒç”¨å¯¹è±¡
 * @param {Function} callback - å›è°ƒå‡½æ•°
 */
async function getEncryptedMessages(call, callback) {
    try {
        const {
            recipient_address,
            limit = 50,
            offset = 0,
            data_type,
            unread_only = false
        } = call.request;

        console.log(`ğŸ“¥ RPC: è·å–æ¶ˆæ¯åˆ—è¡¨è¯·æ±‚`);
        console.log(`   æ¥æ”¶è€…: ${recipient_address}`);
        console.log(`   é™åˆ¶: ${limit}, åç§»: ${offset}`);

        // è°ƒç”¨ message.service è·å–æ¶ˆæ¯
        const result = await messageService.getMessages({
            recipientAddress: recipient_address,
            limit,
            offset,
            dataType: data_type || null,
            unreadOnly: unread_only
        });

        console.log(`âœ… RPC: è¿”å› ${result.messages.length} æ¡æ¶ˆæ¯`);

        // è½¬æ¢ä¸º proto æ ¼å¼
        const messages = result.messages.map(msg => ({
            message_id: msg.message_id,
            sender_address: msg.sender_address,
            data_type: msg.data_type,
            metadata: typeof msg.metadata === 'string' ? msg.metadata : JSON.stringify(msg.metadata || {}),
            encrypted_at: msg.created_at || msg.encrypted_at || '',
            read_at: msg.read_at || '',
            is_read: !!msg.read_at
        }));

        callback(null, {
            messages,
            total_count: result.total_count,
            unread_count: result.unread_count,
            has_more: (offset + limit) < result.total_count
        });
    } catch (error) {
        console.error('âŒ RPC: è·å–æ¶ˆæ¯åˆ—è¡¨å¤±è´¥:', error.message);
        const grpc = require('@grpc/grpc-js');
        callback({
            code: grpc.status.INTERNAL,
            message: error.message
        });
    }
}

/**
 * è·å–å•ä¸ªæ¶ˆæ¯è¯¦æƒ…
 * @param {Object} call - gRPCè°ƒç”¨å¯¹è±¡
 * @param {Function} callback - å›è°ƒå‡½æ•°
 */
async function getMessageById(call, callback) {
    try {
        const { message_id } = call.request;

        console.log(`ğŸ“¥ RPC: è·å–æ¶ˆæ¯è¯¦æƒ…è¯·æ±‚`);
        console.log(`   æ¶ˆæ¯ID: ${message_id}`);

        const message = await messageService.getMessageById(message_id);

        if (!message) {
            throw new Error('Message not found');
        }

        callback(null, {
            message_id: message.message_id,
            sender_address: message.sender_address,
            recipient_address: message.recipient_address,
            encrypted_data: Buffer.from(message.encrypted_data, 'hex'),  // hex è½¬ Buffer
            data_type: message.data_type,
            metadata: typeof message.metadata === 'string' ? message.metadata : JSON.stringify(message.metadata || {}),
            encrypted_at: message.created_at || message.encrypted_at || '',
            read_at: message.read_at || '',
            is_read: !!message.read_at
        });
    } catch (error) {
        console.error('âŒ RPC: è·å–æ¶ˆæ¯è¯¦æƒ…å¤±è´¥:', error.message);
        const grpc = require('@grpc/grpc-js');
        callback({
            code: grpc.status.NOT_FOUND,
            message: error.message
        });
    }
}

/**
 * æ ‡è®°æ¶ˆæ¯ä¸ºå·²è¯»
 * @param {Object} call - gRPCè°ƒç”¨å¯¹è±¡
 * @param {Function} callback - å›è°ƒå‡½æ•°
 */
async function markMessageAsRead(call, callback) {
    try {
        const { message_id, user_address } = call.request;

        console.log(`ğŸ“¥ RPC: æ ‡è®°æ¶ˆæ¯å·²è¯»è¯·æ±‚`);
        console.log(`   æ¶ˆæ¯ID: ${message_id}`);
        console.log(`   ç”¨æˆ·åœ°å€: ${user_address || 'N/A'}`);

        // å¦‚æœæ²¡æœ‰æä¾› user_addressï¼Œå¯èƒ½éœ€è¦ä»æ¶ˆæ¯ä¸­è·å–
        if (!user_address) {
            throw new Error('user_address is required');
        }

        const result = await messageService.markAsRead(message_id, user_address);

        callback(null, {
            success: true,
            message: 'Message marked as read',
            affected_count: result ? 1 : 0
        });
    } catch (error) {
        console.error('âŒ RPC: æ ‡è®°å·²è¯»å¤±è´¥:', error.message);
        callback(null, {
            success: false,
            message: error.message,
            affected_count: 0
        });
    }
}

/**
 * æ’¤é”€/åˆ é™¤æ¶ˆæ¯
 * @param {Object} call - gRPCè°ƒç”¨å¯¹è±¡
 * @param {Function} callback - å›è°ƒå‡½æ•°
 */
async function revokeMessage(call, callback) {
    try {
        const { message_id } = call.request;

        console.log(`ğŸ“¥ RPC: æ’¤é”€æ¶ˆæ¯è¯·æ±‚`);
        console.log(`   æ¶ˆæ¯ID: ${message_id}`);

        await messageService.deleteMessage(message_id);

        callback(null, {
            success: true,
            message: 'Message revoked successfully',
            affected_count: 1
        });
    } catch (error) {
        console.error('âŒ RPC: æ’¤é”€æ¶ˆæ¯å¤±è´¥:', error.message);
        callback(null, {
            success: false,
            message: error.message,
            affected_count: 0
        });
    }
}

/**
 * æ‰¹é‡æ ‡è®°å·²è¯»
 * @param {Object} call - gRPCè°ƒç”¨å¯¹è±¡
 * @param {Function} callback - å›è°ƒå‡½æ•°
 */
async function markMultipleAsRead(call, callback) {
    try {
        const { message_ids, user_address } = call.request;

        console.log(`ğŸ“¥ RPC: æ‰¹é‡æ ‡è®°å·²è¯»è¯·æ±‚`);
        console.log(`   æ¶ˆæ¯æ•°é‡: ${message_ids.length}`);

        let affectedCount = 0;
        for (const messageId of message_ids) {
            try {
                await messageService.markAsRead(messageId, user_address);
                affectedCount++;
            } catch (error) {
                console.warn(`   è·³è¿‡æ¶ˆæ¯ ${messageId}:`, error.message);
            }
        }

        callback(null, {
            success: true,
            message: `Marked ${affectedCount} messages as read`,
            affected_count: affectedCount
        });
    } catch (error) {
        console.error('âŒ RPC: æ‰¹é‡æ ‡è®°å¤±è´¥:', error.message);
        callback(null, {
            success: false,
            message: error.message,
            affected_count: 0
        });
    }
}

module.exports = {
    sendEncryptedMessage,
    getEncryptedMessages,
    getMessageById,
    markMessageAsRead,
    revokeMessage,
    markMultipleAsRead
};

